оптимизация изображение для 1 проекта. Подписание логотипа в alt

--- a/1.html
+++ b/1.html
@@ -83,7 +83,7 @@
     </div>
     <!-- /.hero-arrow -->
     <div class="hero-logo">
-      <img src="img/footer/White.png" alt="Логотип студии pine-studio">
+      <img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio">
     </div>
     <!-- /.hero-logo -->
   </div>
@@ -150,55 +150,55 @@
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/2.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/2.jpg" itemprop="contentUrl" data-size="1905x2000">
             <img src="img/1/render/2.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/27.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/27.jpg" itemprop="contentUrl" data-size="1800x2000">
             <img src="img/1/render/27.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/25.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/25.jpg" itemprop="contentUrl" data-size="2000x1600">
             <img src="img/1/render/25.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/26.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/26.jpg" itemprop="contentUrl" data-size="2000x1600">
             <img src="img/1/render/26.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/28.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/28.jpg" itemprop="contentUrl" data-size="1800x2000">
             <img src="img/1/render/28.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/24.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/24.jpg" itemprop="contentUrl" data-size="2000x1600">
             <img src="img/1/render/24.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/29.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/29.jpg" itemprop="contentUrl" data-size="2000x1600">
             <img src="img/1/render/29.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/8.jpg" itemprop="contentUrl" data-size="2000x1600">
             <img src="img/1/render/8.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/9.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/9.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
@@ -222,19 +222,19 @@
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/13.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/13.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/13.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/3.jpg" itemprop="contentUrl" data-size="2000x1714">
             <img src="img/1/render/3.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/4.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/4.jpg" itemprop="contentUrl" data-size="2000x1478">
             <img src="img/1/render/4.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
@@ -246,73 +246,73 @@
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/6.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/6.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/6.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/7.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/7.jpg" itemprop="contentUrl" data-size="1680x2000">
             <img src="img/1/render/7.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/19.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/19.jpg" itemprop="contentUrl" data-size="2000x1500">
             <img src="img/1/render/19.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/20.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/20.jpg" itemprop="contentUrl" data-size="2000x1500">
             <img src="img/1/render/20.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/21.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/21.jpg" itemprop="contentUrl" data-size="2000x2000">
             <img src="img/1/render/21.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/22.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/22.jpg" itemprop="contentUrl" data-size="1500x2000">
             <img src="img/1/render/22.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/23.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/23.jpg" itemprop="contentUrl" data-size="2000x1680">
             <img src="img/1/render/23.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/14.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/14.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/14.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/15.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/15.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/15.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/16.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/16.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/16.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/17.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/17.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/17.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/18.jpg" itemprop="contentUrl" data-size="2000x1800">
+          <a href="img/1/render/18.jpg" itemprop="contentUrl" data-size="2000x1700">
             <img src="img/1/render/18.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
@@ -325,47 +325,6 @@
   <!-- /.portfolio -->
 
 
-  <!-- <div class="portfolio ">
-    <div class="container">
-      <div class="portfolio-cards" id="project_1">
-        <div class="portfolio-card">
-          <img src="../img/1/render/1.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/2.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/3.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/4.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/5.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/6.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/7.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/8.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/9.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/10.jpg" alt="">
-        </div>
-      </div> -->
-  <!-- /.portfolio-wrap -->
-  <!-- </div> -->
-  <!-- /.container -->
-  <!-- </div> -->
-  <!-- /.project__portfolio -->
-
-
   <script src="https://static.kuula.io/embed.js"
     data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%"
     data-height="640px"></script>
@@ -376,7 +335,7 @@
       <div class="container">
         <div class="footer-wrap">
           <div class="footer-logo">
-            <a href="index.html"><img src="img/footer/White.png" alt=""></a>
+            <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
           </div>
           <!-- /.footer-logo -->
           <div class="page-title footer_title">
