--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <img src="img/header/circle-logo.png" alt="">
+          <img src="img/header/circle-logo.png" alt="Логотип студии 3D дизайна Pine-studio">
         </div>
         <!-- /.header-logo -->
         <div class="page-title header__title">
@@ -93,7 +93,7 @@
     </div>
     <!-- /.hero-arrow -->
     <div class="hero-logo">
-      <img src="img/footer/White.png" alt="Логотип студии pine-studio">
+      <img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio">
     </div>
     <!-- /.hero-logo -->
   </div>
@@ -576,7 +576,7 @@
     <div class="container">
       <div class="footer-wrap">
         <div class="footer-logo">
-          <a href="index.html"><img src="img/footer/White.png" alt=""></a>
+          <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.footer-logo -->
         <div class="page-title footer_title">
