--- a/2.html
+++ b/2.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <a href="index.html"><img src="img/header/circle-logo.png" alt=""></a>
+          <a href="index.html"><img src="img/header/circle-logo.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.header-logo -->
         <div class="header_title">
@@ -66,7 +66,7 @@
     </div>
     <!-- /.hero-arrow -->
     <div class="hero-logo">
-      <img src="img/footer/White.png" alt="Логотип студии pine-studio">
+      <img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio">
     </div>
     <!-- /.hero-logo -->
   </div>
@@ -206,47 +206,6 @@
   <!-- /.portfolio -->
 
 
-  <!-- <div class="portfolio ">
-    <div class="container">
-      <div class="portfolio-cards" id="project_1">
-        <div class="portfolio-card">
-          <img src="../img/1/render/1.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/2.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/3.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/4.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/5.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/6.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/7.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/8.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/9.jpg" alt="">
-        </div>
-        <div class="portfolio-card">
-          <img src="../img/1/render/10.jpg" alt="">
-        </div>
-      </div> -->
-  <!-- /.portfolio-wrap -->
-  <!-- </div> -->
-  <!-- /.container -->
-  <!-- </div> -->
-  <!-- /.project__portfolio -->
-
-
   <script src="https://static.kuula.io/embed.js"
     data-kuula="https://kuula.co/share/7YTs9?fs=1&vr=0&sd=1&thumbs=1&chromeless=0&logo=0" data-width="100%"
     data-height="640px"></script>
@@ -257,7 +216,7 @@
     <div class="container">
       <div class="footer-wrap">
         <div class="footer-logo">
-          <a href="index.html"><img src="img/footer/White.png" alt=""></a>
+          <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.footer-logo -->
         <div class="header_title">
