--- a/3.html
+++ b/3.html
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <a href="index.html"><img src="img/header/circle-logo.png" alt=""></a>
+          <a href="index.html"><img src="img/header/circle-logo.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.header-logo -->
         <div class="header_title">
@@ -66,7 +66,7 @@
     </div>
     <!-- /.hero-arrow -->
     <div class="hero-logo">
-      <img src="img/footer/White.png" alt="Логотип студии pine-studio">
+      <img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio">
     </div>
     <!-- /.hero-logo -->
   </div>
@@ -198,7 +198,7 @@
     <div class="container">
       <div class="footer-wrap">
         <div class="footer-logo">
-          <a href="index.html"><img src="img/footer/White.png" alt=""></a>
+          <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.footer-logo -->
         <div class="header_title">
