--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@
           <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.footer-logo -->
-        <div class="page-title footer_title">
+        <div class="page-title footer__title">
           студия 3D визуализации интерьеров
         </div>
         <!-- /.header_title -->
