--- a/1.html
+++ b/1.html
@@ -15,12 +15,12 @@
 
 <body>
 
-   <!-- ШАПКА САЙТА С ЛОГО И НАВИГАЦИЕЙ -->
-   <header class="header">
+  <!-- ШАПКА САЙТА С ЛОГО И НАВИГАЦИЕЙ -->
+  <header class="header">
     <div class="container">
       <div class="header-wrap">
         <div class="header-logo">
-          <a href="index.html"><img src="img/header/circle-logo.png" alt=""></a>
+          <a href="index.html"><img src="img/header/circle-logo.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
         <!-- /.header-logo -->
         <div class="page-title header__title">
@@ -45,22 +45,22 @@
   </header>
   <!-- /.header -->
 
-	<!-- МОДАЛЬНОЕ ОКНО БУРГЕР-МЕНЮ-->
-	<div class="menu-mobile" id="menu_mobile">
-			<div class="menu-block">
-				<nav class="menu-nav">
-					<ul class="menu-list">
-						<li class="menu-list__item"><a href="index.html#edge">О нас</a></li>
-						<li class="menu-list__item"><a href="index.html#steps">Этапы работ</a></li>
-						<li class="menu-list__item"><a href="index.html#portfolio">Проекты</a></li>
-						<li class="menu-list__item"><a href="index.html#contacts">Контакты</a></li>
-					</ul>
-				</nav>
-				<!-- /.menu-nav -->
-			</div>
-			<!-- /.menu-block -->
-	</div>
-	<!-- /.modal-menu -->
+  <!-- МОДАЛЬНОЕ ОКНО БУРГЕР-МЕНЮ-->
+  <div class="menu-mobile" id="menu_mobile">
+    <div class="menu-block">
+      <nav class="menu-nav">
+        <ul class="menu-list">
+          <li class="menu-list__item"><a href="index.html#edge">О нас</a></li>
+          <li class="menu-list__item"><a href="index.html#steps">Этапы работ</a></li>
+          <li class="menu-list__item"><a href="index.html#portfolio">Проекты</a></li>
+          <li class="menu-list__item"><a href="index.html#contacts">Контакты</a></li>
+        </ul>
+      </nav>
+      <!-- /.menu-nav -->
+    </div>
+    <!-- /.menu-block -->
+  </div>
+  <!-- /.modal-menu -->
 
 
   <!-- КНОПКА ВВЕРХ В ПРАВОМ НЖНЕМ УГЛУ -->
@@ -144,8 +144,8 @@
     <div class="container">
       <div class="portfolio-cards project-portfolio_1" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/1.jpg" itemprop="contentUrl" data-size="1400x2000">
-            <img src="img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/31.jpg" itemprop="contentUrl" data-size="1400x2000">
+            <img src="img/1/render/31.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
@@ -330,55 +330,55 @@
     data-height="640px"></script>
 
 
-    <!-- ПОДВАЛ САЙТА -->
-    <footer class="footer">
-      <div class="container">
-        <div class="footer-wrap">
-          <div class="footer-logo">
-            <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
-          </div>
-          <!-- /.footer-logo -->
-          <div class="page-title footer_title">
-            студия 3D визуализации интерьеров
-          </div>
-          <!-- /.header_title -->
-          <div class="footer-social">
-            <ul class="list social__list footer-social__list">
-              <li class="social__item footer-social__item whatsapp">
-                <a href="https://api.whatsapp.com/send?phone=79215623327" target="_blank">
-                  <i class="fab fa-whatsapp"></i>
-                </a>
-              </li>
-              <li class="social__item footer-social__item instagram">
-                <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
-                  <i class="fab fa-instagram"></i>
-                </a>
-              </li>
-              <li class="social__item footer-social__item telegram">
-                <a href="#" target="_blank">
-                  <i class="fab fa-telegram-plane"></i>
-                </a>
-              </li>
-              <li class="social__item footer-social__item pinterest">
-                <a href="https://www.pinterest.ru/pinestudio3d" target="_blank">
-                  <i class="fab fa-pinterest-p"></i>
-                </a>
-              </li>
-              <li class="social__item footer-social__item behance">
-                <a href="https://www.behance.net/pinestudio3d" target="_blank">
-                  <i class="fab fa-behance"></i>
-                </a>
-              </li>
-            </ul>
-            <!-- /.footer-list -->
-          </div>
-          <!-- /.footer-social -->
+  <!-- ПОДВАЛ САЙТА -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-wrap">
+        <div class="footer-logo">
+          <a href="index.html"><img src="img/footer/White.png" alt="Логотип студии 3D дизайна Pine-studio"></a>
         </div>
-        <!-- /.footer-wrap -->
+        <!-- /.footer-logo -->
+        <div class="page-title footer__title">
+          студия 3D визуализации интерьеров
+        </div>
+        <!-- /.header_title -->
+        <div class="footer-social">
+          <ul class="list social__list footer-social__list">
+            <li class="social__item footer-social__item whatsapp">
+              <a href="https://api.whatsapp.com/send?phone=79215623327" target="_blank">
+                <i class="fab fa-whatsapp"></i>
+              </a>
+            </li>
+            <li class="social__item footer-social__item instagram">
+              <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </li>
+            <li class="social__item footer-social__item telegram">
+              <a href="#" target="_blank">
+                <i class="fab fa-telegram-plane"></i>
+              </a>
+            </li>
+            <li class="social__item footer-social__item pinterest">
+              <a href="https://www.pinterest.ru/pinestudio3d" target="_blank">
+                <i class="fab fa-pinterest-p"></i>
+              </a>
+            </li>
+            <li class="social__item footer-social__item behance">
+              <a href="https://www.behance.net/pinestudio3d" target="_blank">
+                <i class="fab fa-behance"></i>
+              </a>
+            </li>
+          </ul>
+          <!-- /.footer-list -->
+        </div>
+        <!-- /.footer-social -->
       </div>
-      <!-- /.container -->
-    </footer>
-    <!-- /.footer -->
+      <!-- /.footer-wrap -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 
   <script src="js/photoswipe.js"></script>
