--- a/2.html
+++ b/2.html
@@ -277,7 +277,7 @@
               </a>
             </li>
             <li class="footer-social__item telegram">
-              <a href="#" target="_blank">
+              <a href="https://telegram.im/@nastya_mariyevskaya" target="_blank">
                 <i class="fab fa-telegram-plane"></i>
               </a>
             </li>
