--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
     <div class="container">
       <div class="portfolio-cards portfolio_height">
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/7.jpg"
+          <a class="portfolio-card_hover" href="7.html" target="_blank"><img src="img/portfolio/7.jpg"
               alt=""></a>
         </div>
         <div class="portfolio-card">
@@ -343,28 +343,28 @@
               alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="9.html" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/5.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="5.html" target="_blank"><img src="img/portfolio/5.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/11.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="11.html" target="_blank"><img src="img/portfolio/11.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/4.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="4.html" target="_blank"><img src="img/portfolio/4.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="8.html" target="_blank"><img src="img/portfolio/8.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
           <a class="portfolio-card_hover" href="1.html" target="_blank"><img src="img/portfolio/1.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="10.html" target="_blank"><img src="img/portfolio/10.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="#" target="_blank"><img src="img/portfolio/6.jpg" alt=""></a>
+          <a class="portfolio-card_hover" href="6.html" target="_blank"><img src="img/portfolio/6.jpg" alt=""></a>
         </div>
       </div>
       <!-- /.portfolio-wrap -->
@@ -385,19 +385,16 @@
           </div>
         </div>
         <!-- /.compare-image -->
-        <div class="compare-text">
-          <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то
-            информацию.
-            Может полезную, а может не очень</p>
+        <div class="compare__text">
+          <p>Световой сценарий дневного или искусственного освещения, а также их комбинации даст <span>максимальную передачу</span> восприятия помещения в реальности </p>
         </div>
         <!-- /.compare-text -->
       </div>
       <!-- /.compare-block -->
       <div class="compare-block">
-        <div class="compare-text">
-          <p>Какой то текст, который будет описывать ползунки или преимущества студии или еще нести какую то
-            информацию.
-            Может полезную, а может не очень</p>
+        <div class="compare__text">
+          <p>Это поможет заказчику увидеть свой будущий дом или квартиру 
+            <span>максимально реалистично,</span> подчеркнуть его преимущества, понять, что будет удобно и полезно</p>
         </div>
         <!-- /.compare-text -->
         <div class="compare-image">
@@ -446,7 +443,7 @@
                 </a>
               </li>
               <li class="social__item contacts-social__item telegram">
-                <a href="#" target="_blank">
+                <a href="https://telegram.im/@nastya_mariyevskaya" target="_blank">
                   <i class="fab fa-telegram-plane"></i>
                 </a>
               </li>
@@ -596,7 +593,7 @@
               </a>
             </li>
             <li class="social__item footer-social__item telegram">
-              <a href="#" target="_blank">
+              <a href="https://telegram.im/@nastya_mariyevskaya" target="_blank">
                 <i class="fab fa-telegram-plane"></i>
               </a>
             </li>
