--- a/1.html
+++ b/1.html
@@ -396,7 +396,7 @@
                 </a>
               </li>
               <li class="social__item footer-social__item telegram">
-                <a href="#" target="_blank">
+                <a href="https://telegram.im/@nastya_mariyevskaya" target="_blank">
                   <i class="fab fa-telegram-plane"></i>
                 </a>
               </li>
