Полностью доделана страница 1 объекта

--- a/1.html
+++ b/1.html
@@ -144,13 +144,13 @@
     <div class="container">
       <div class="portfolio-cards project-portfolio_1" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/31.jpg" itemprop="contentUrl" data-size="1400x2000">
-            <img src="img/1/render/31.jpg" itemprop="thumbnail" alt="Image description" />
+          <a href="img/1/render/1.jpg" itemprop="contentUrl" data-size="1050x1500">
+            <img src="img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/1/render/2.jpg" itemprop="contentUrl" data-size="1905x2000">
+          <a href="img/1/render/2.jpg" itemprop="contentUrl" data-size="1429x1500">
             <img src="img/1/render/2.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
@@ -355,7 +355,7 @@
               </a>
             </li>
             <li class="social__item footer-social__item telegram">
-              <a href="#" target="_blank">
+              <a href="https://telegram.im/@nastya_mariyevskaya" target="_blank">
                 <i class="fab fa-telegram-plane"></i>
               </a>
             </li>
