--- a/index.html
+++ b/index.html
@@ -380,8 +380,8 @@
       <div class="compare-block">
         <div class="compare-image">
           <div id="container1" class='twentytwenty-container'>
-            <img src="img/compare/Муляр спальня гостевая 1 правка сетка.jpg" alt="">
-            <img src="img/compare/Муляр спальня гостевая 1 правка.jpg" alt="">
+            <img src="img/compare/3.jpg" alt="Изображение спальни днем. Pine-studio">
+            <img src="img/compare/4.jpg" alt="Изображение спальни ночью. Pine-studio">
           </div>
         </div>
         <!-- /.compare-image -->
