--- a/2.html
+++ b/2.html
@@ -252,7 +252,7 @@
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
-            <li class="footer-social__item telegram">
+            <li class="social__item footer-social__item telegram">
               <a href="https://telegram.im/@nastya_mariyevskaya" target="_blank">
                 <i class="fab fa-telegram-plane"></i>
               </a>
