--- a/3.html
+++ b/3.html
@@ -192,28 +192,10 @@
         </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/3/render/9.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="img/3/render/9.jpg" itemprop="thumbnail" alt="Image description" />
-          </a>
-        </figure>
-
-        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/3/render/10.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="img/3/render/10.jpg" itemprop="thumbnail" alt="Image description" />
-          </a>
-        </figure>
-
-        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
           <a href="img/3/render/11.jpg" itemprop="contentUrl" data-size="2000x1800">
             <img src="img/3/render/11.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
-        </figure>
-
-        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/3/render/12.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="img/3/render/12.jpg" itemprop="thumbnail" alt="Image description" />
-          </a>
-        </figure>
+        </figure>s
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
           <a href="img/3/render/13.jpg" itemprop="contentUrl" data-size="2000x1800">
@@ -236,12 +218,6 @@
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
           <a href="img/3/render/16.jpg" itemprop="contentUrl" data-size="2000x1800">
             <img src="img/3/render/16.jpg" itemprop="thumbnail" alt="Image description" />
-          </a>
-        </figure>
-
-        <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-          <a href="img/3/render/17.jpg" itemprop="contentUrl" data-size="2000x1800">
-            <img src="img/3/render/17.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
         </figure>
 
