--- a/index.html
+++ b/index.html
@@ -217,8 +217,7 @@
             <i></i>
             <h2 class="steps__subtitle">Получение технического задания</h2>
             <ul class="steps-text">
-              <li class="steps-text__item">Вам необходимо ознакомиться с требованиями к техническому заданию.
-                <br> Их можно найти ниже по сайту</li>
+              <li class="steps-text__item">Вам необходимо ознакомиться с требованиями к техническому заданию. Их можно найти ниже по сайту</li>
               <li class="steps-text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и
                 отдельно картинки. Как вам удобно и привычно</li>
             </ul>
@@ -483,7 +482,7 @@
   <section class="section follow">
     <h1 class="title follow__title">СЛЕДИТЕ ЗА НАМИ В INSTAGRAM</h1>
     <div class="follow__link">
-      <a href="https://www.instagram.com/mariyevskaya/" target="_blank">@mariyevskaya</a>
+      <a href="https://www.instagram.com/pinestudio3d/" target="_blank">@pinestudio3d</a>
     </div>
     <div class="follow-slider">
       <div class="follow-slider__item">
