Изменена ссылка на инстаграм. Добавлен отступв портфолио сверху

--- a/3.html
+++ b/3.html
@@ -339,7 +339,7 @@
               </a>
             </li>
             <li class="social__item footer-social__item instagram">
-              <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
+              <a href="https://www.instagram.com/pinestudio3d/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
