--- a/11.html
+++ b/11.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <title>Pine-studio. Cтудия в черно-белых тонах</title>
+  <title>Pine-studio. Интерьер с яркими акцентами</title>
 
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="default-skin/default-skin.css">
@@ -29,10 +29,10 @@
         <!-- /.header_title -->
         <nav class="header-nav">
           <ul class="list header-list">
-            <li class="header-list__item"><a href="index.html#edge" target="_blank">О нас</a></li>
-            <li class="header-list__item"><a href="index.html#steps" target="_blank">Этапы работ</a></li>
-            <li class="header-list__item"><a href="index.html#portfolio" target="_blank">Проекты</a></li>
-            <li class="header-list__item"><a href="index.html#contacts" target="_blank">Контакты</a></li>
+            <li class="header-list__item"><a href="index.html#edge">О нас</a></li>
+            <li class="header-list__item"><a href="index.html#steps">Этапы работ</a></li>
+            <li class="header-list__item"><a href="index.html#portfolio">Проекты</a></li>
+            <li class="header-list__item"><a href="index.html#contacts">Контакты</a></li>
           </ul>
           <!-- /.list header-list -->
           <button class="header-burger burger_alert "><span class="header-burger__line"></span></button>
@@ -73,7 +73,7 @@
   <!-- ПЕРВИЙ ВИДИМЫй БЛОК НА СТРАНИЦЕ hero -->
   <div class="hero project__hero project_11">
     <div class="project__hero__content">
-      <span class="title project__title">Cтудия в черно-белых тонах</span>
+      <span class="title project__title">Интерьер с яркими акцентами</span>
       <span class="project__subtitle">Дизайн проект - Pine Studio</span>
     </div>
     <div class="arrow hero-arrow">
@@ -261,7 +261,7 @@
               </a>
             </li>
             <li class="social__item footer-social__item instagram">
-              <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
+              <a href="https://www.instagram.com/pinestudio3d/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
