--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         </div>
         <!-- /.compare-image -->
         <div class="compare__text">
-          <p>Световой сценарий дневного или искусственного освещения, а также их комбинации даст <span>максимальную передачу</span> восприятия помещения в реальности </p>
+          <p>Световой сценарий дневного или искусственного освещения, а также их комбинации даст максимальную передачу восприятия помещения в реальности </p>
         </div>
         <!-- /.compare-text -->
       </div>
@@ -393,7 +393,7 @@
       <div class="compare-block">
         <div class="compare__text">
           <p>Это поможет заказчику увидеть свой будущий дом или квартиру 
-            <span>максимально реалистично,</span> подчеркнуть его преимущества, понять, что будет удобно и полезно</p>
+            максимально реалистично, подчеркнуть его преимущества, понять, что будет удобно и полезно</p>
         </div>
         <!-- /.compare-text -->
         <div class="compare-image">
@@ -437,7 +437,7 @@
                 </a>
               </li>
               <li class="social__item contacts-social__item instagram">
-                <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
+                <a href="https://www.instagram.com/pinestudio3d/" target="_blank">
                   <i class="fab fa-instagram"></i>
                 </a>
               </li>
@@ -587,7 +587,7 @@
               </a>
             </li>
             <li class="social__item footer-social__item instagram">
-              <a href="https://www.instagram.com/mariyevskaya/" target="_blank">
+              <a href="https://www.instagram.com/pinestudio3d/" target="_blank">
                 <i class="fab fa-instagram"></i>
               </a>
             </li>
