--- a/3.html
+++ b/3.html
@@ -195,7 +195,7 @@
           <a href="img/3/render/11.jpg" itemprop="contentUrl" data-size="2000x1800">
             <img src="img/3/render/11.jpg" itemprop="thumbnail" alt="Image description" />
           </a>
-        </figure>s
+        </figure>
 
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
           <a href="img/3/render/13.jpg" itemprop="contentUrl" data-size="2000x1800">
