--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
           </div>
           <!-- /.contacts-social -->
           <!-- форма -->
-          <form action="mail.php" method="POST" class="form contacts__form" id="contacts-form">
+          <form action="#" method="POST" class="form contacts__form" id="contacts-form">
             <input type="text" name="username" class="input contacts__input" placeholder="Ваше имя">
             <input type="tel" name="userphone" class="input contacts__input phone" placeholder="Ваш телефон">
             <input type="email" name="useremail" class="input contacts__input contacts_email" placeholder="Ваш email">
@@ -630,7 +630,12 @@
   <script src="js/up.js"></script>
   <script src="js/burger.js"></script>
   <script src="js/twentytwenty-settings.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
+  <script src="js/validate-form.js"></script>
   <!-- endbuild -->
+
+
 
 
 
