Устранение проблемы с переходом по ссылке (удаление event.PreventDefault и переназначение галереи на project-portfolio__cards

--- a/src/1.html
+++ b/src/1.html
@@ -142,7 +142,7 @@
 
   <div class="portfolio" id="portfolio">
     <div class="container">
-      <div class="portfolio-cards project-portfolio_1" itemscope itemtype="http://schema.org/ImageGallery">
+      <div class="portfolio-cards project-portfolio_1 project-portfolio__cards" itemscope itemtype="http://schema.org/ImageGallery">
         <figure class="portfolio-card" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
           <a href="img/1/render/1.jpg" itemprop="contentUrl" data-size="1050x1500">
             <img src="img/1/render/1.jpg" itemprop="thumbnail" alt="Image description" />
