Обработчик отправки формы. Добавление иконки сайта в панель

--- a/src/7.html
+++ b/src/7.html
@@ -8,6 +8,7 @@
 
   <title>Pine-studio. Современный интерьер с элементами этно</title>
 
+  <link rel="icon" href="img/header/circle-logo.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="default-skin/default-skin.css">
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
