--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
 
   <title>Pine-studio</title>
 
+  <link rel="icon" href="img/header/circle-logo.png">
   <link rel="stylesheet" href="css/style.css">
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
 </head>
@@ -459,7 +460,7 @@
           </div>
           <!-- /.contacts-social -->
           <!-- форма -->
-          <form action="#" method="POST" class="form contacts__form" id="contacts-form">
+          <form action="mail.php" method="POST" class="form contacts__form" id="contacts-form">
             <input type="text" name="username" class="input contacts__input" placeholder="Ваше имя">
             <input type="tel" name="userphone" class="input contacts__input phone" placeholder="Ваш телефон">
             <input type="email" name="useremail" class="input contacts__input contacts_email" placeholder="Ваш email">
@@ -629,7 +630,7 @@
   <script src="js/twentytwenty-settings.js"></script>
   <script src="js/jquery.validate.min.js"></script>
   <script src="js/jquery.maskedinput.min.js"></script>
-  <script src="js/validate-form.js"></script>
+  <script src="js/form.js"></script>
   <!-- endbuild -->
 
 
