--- a/src/11.html
+++ b/src/11.html
@@ -8,6 +8,7 @@
 
   <title>Pine-studio. Интерьер с яркими акцентами</title>
 
+  <link rel="icon" href="img/header/circle-logo.png">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="default-skin/default-skin.css">
   <link href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" rel="stylesheet">
