Изменение размеров input в форме обратной связи и размера заголовка contacts__title

--- a/src/index.html
+++ b/src/index.html
@@ -461,7 +461,7 @@
           <!-- /.contacts-social -->
           <!-- форма -->
           <form action="mail.php" method="POST" class="form contacts__form" id="contacts-form">
-            <input type="text" name="username" class="input contacts__input" placeholder="Ваше имя">
+            <input type="text" name="username" class="input contacts__input name" placeholder="Ваше имя">
             <input type="tel" name="userphone" class="input contacts__input phone" placeholder="Ваш телефон">
             <input type="email" name="useremail" class="input contacts__input contacts_email" placeholder="Ваш email">
             <button type="submit" class="button contacts__button">Отправить</button>
