--- a/src/index.html
+++ b/src/index.html
@@ -46,23 +46,22 @@
   </header>
   <!-- /.header -->
 
-	<!-- МОДАЛЬНОЕ ОКНО БУРГЕР-МЕНЮ-->
-	<div class="menu-mobile" id="menu_mobile">
-			<div class="menu-block">
-				</button> -->
-				<nav class="menu-nav">
-					<ul class="menu-list">
-						<li class="menu-list__item"><a href="#edge">О нас</a></li>
-						<li class="menu-list__item"><a href="#steps">Этапы работ</a></li>
-						<li class="menu-list__item"><a href="#portfolio">Проекты</a></li>
-						<li class="menu-list__item"><a href="#contacts">Контакты</a></li>
-					</ul>
-				</nav>
-				<!-- /.menu-nav -->
-			</div>
-			<!-- /.menu-block -->
-	</div>
-	<!-- /.modal-menu -->
+  <!-- МОДАЛЬНОЕ ОКНО БУРГЕР-МЕНЮ-->
+  <div class="menu-mobile" id="menu_mobile">
+    <div class="menu-block">
+      <nav class="menu-nav">
+        <ul class="menu-list">
+          <li class="menu-list__item"><a href="#edge">О нас</a></li>
+          <li class="menu-list__item"><a href="#steps">Этапы работ</a></li>
+          <li class="menu-list__item"><a href="#portfolio">Проекты</a></li>
+          <li class="menu-list__item"><a href="#contacts">Контакты</a></li>
+        </ul>
+      </nav>
+      <!-- /.menu-nav -->
+    </div>
+    <!-- /.menu-block -->
+  </div>
+  <!-- /.modal-menu -->
 
 
   <!-- ПЕРВИЙ ВИДИМЫ БЛОК НА СТРАНИЦЕ-СЛАЙДЕР hero -->
@@ -197,7 +196,8 @@
     </div>
     <!-- /.container -->
     <div class="edge-main">
-      <p class="edge-main__text">У НАС НЕТ СЛОЖНЫХ РАСЧЕТОВ СТОИМОСТИ ВИЗУАЛИЗАЦИИ. <br> 1 м <sup>2</sup> ПОМЕЩЕНИЯ – 500
+      <p class="edge-main__text">У НАС НЕТ СЛОЖНЫХ РАСЧЕТОВ СТОИМОСТИ ВИЗУАЛИЗАЦИИ. <br> 1 м <sup>2</sup> ПОМЕЩЕНИЯ –
+        500
         РУБЛЕЙ</p>
     </div>
     <!-- /.edge-card -->
@@ -216,7 +216,8 @@
             <i></i>
             <h2 class="steps__subtitle">Получение технического задания</h2>
             <ul class="steps-text">
-              <li class="steps-text__item">Вам необходимо ознакомиться с требованиями к техническому заданию. Их можно найти ниже по сайту</li>
+              <li class="steps-text__item">Вам необходимо ознакомиться с требованиями к техническому заданию. Их можно
+                найти ниже по сайту</li>
               <li class="steps-text__item">ТЗ вы можете оформить в виде таблицы, коллажа или собрать текстовый файл и
                 отдельно картинки. Как вам удобно и привычно</li>
             </ul>
@@ -329,16 +330,13 @@
     <div class="container">
       <div class="portfolio-cards portfolio_height">
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="7.html" target="_blank"><img src="img/portfolio/7.jpg"
-              alt=""></a>
+          <a class="portfolio-card_hover" href="7.html" target="_blank"><img src="img/portfolio/7.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="2.html" target="_blank"><img src="img/portfolio/2.jpg"
-              alt=""></a>
+          <a class="portfolio-card_hover" href="2.html" target="_blank"><img src="img/portfolio/2.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
-          <a class="portfolio-card_hover" href="3.html" target="_blank"><img src="img/portfolio/3.jpg"
-              alt=""></a>
+          <a class="portfolio-card_hover" href="3.html" target="_blank"><img src="img/portfolio/3.jpg" alt=""></a>
         </div>
         <div class="portfolio-card">
           <a class="portfolio-card_hover" href="9.html" target="_blank"><img src="img/portfolio/9.jpg" alt=""></a>
@@ -384,14 +382,15 @@
         </div>
         <!-- /.compare-image -->
         <div class="compare__text">
-          <p>Световой сценарий дневного или искусственного освещения, а также их комбинации даст максимальную передачу восприятия помещения в реальности </p>
+          <p>Световой сценарий дневного или искусственного освещения, а также их комбинации даст максимальную передачу
+            восприятия помещения в реальности </p>
         </div>
         <!-- /.compare-text -->
       </div>
       <!-- /.compare-block -->
       <div class="compare-block">
         <div class="compare__text">
-          <p>Это поможет заказчику увидеть свой будущий дом или квартиру 
+          <p>Это поможет заказчику увидеть свой будущий дом или квартиру
             максимально реалистично, подчеркнуть его преимущества, понять, что будет удобно и полезно</p>
         </div>
         <!-- /.compare-text -->
@@ -632,12 +631,6 @@
   <script src="js/jquery.maskedinput.min.js"></script>
   <script src="js/form.js"></script>
   <!-- endbuild -->
-
-
-
-
-
 </body>
-
 
 </html>
